make mobile-menu and links functional

--- a/index.css
+++ b/index.css
@@ -22,6 +22,10 @@ body {
   box-sizing: content-box;
 }
 
+header {
+  position: fixed;
+}
+
 .upper-header {
   display: none;
 }
@@ -58,6 +62,46 @@ nav ul {
   margin-right: 0;
   height: 1em;
   margin-left: 6em;
+}
+
+.mobile-menu {
+  visibility: none;
+  width: 0;
+  height: 0;
+  transform: translate(100vw, 0);
+  transition: 0.5s;
+}
+
+.mobile-menu.active {
+  visibility: visible;
+  position: fixed;
+  transform: translate(0, 0);
+  background: var(--dark-grey);
+  width: 100vw;
+  height: 100vh;
+  z-index: 10;
+}
+
+.list3 {
+  padding-top: 1em;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  text-decoration: none;
+}
+
+.mobile-nav a {
+  text-decoration: none;
+  color: #fff5e1;
+  font-family: var(--lato);
+  font-size: 20px;
+}
+
+#close {
+  text-align-last: right;
+  padding-right: 2em;
+  padding-bottom: 3em;
 }
 
 .home {
