--- a/about.css
+++ b/about.css
@@ -112,7 +112,7 @@ nav ul {
   padding: 1em;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
 }
 
 #about-logo {
@@ -131,8 +131,9 @@ nav ul {
 .home h1 {
   color: var(--orange-color);
   font-family: var(--crete-round);
-  font-size: 33px;
+  font-size: 30px;
   margin: 0;
+  text-align: -webkit-center;
 }
 
 .home h2 {
@@ -179,6 +180,7 @@ nav ul {
   margin-bottom: 1em;
   padding: 3px;
   margin-top: 1em;
+  text-align: center;
   background: rgb(211, 211, 211, 0.6);
 }
 
@@ -322,14 +324,11 @@ hr {
   padding-top: 1em;
 }
 
-footer {
-  margin-bottom: 4em;
-}
-
 .footer-bottom {
   display: flex;
   padding: 1em;
   align-items: center;
+  justify-content: center;
 }
 
 .footer-bottom h2 {
@@ -337,7 +336,7 @@ footer {
   font-size: 1em;
   padding: 0;
   margin: 0;
-  padding-right: 5em;
+  padding-right: 3em;
 }
 
 .footer-bottom p {
@@ -619,7 +618,7 @@ hr#linnn {
   }
 
   .home h3 {
-    font-size: 38px;
+    display: none;
   }
 
   #about-logo {
@@ -627,7 +626,8 @@ hr#linnn {
   }
 
   .home h1 {
-    font-size: 4em;
+    font-size: 44px;
+    padding-top: 2em;
   }
 
   #p1 {
@@ -715,6 +715,7 @@ hr#linnn {
 
   .footer-bottom {
     padding-left: 10em;
+    justify-content: flex-start;
   }
 
   .btn-more {
@@ -772,5 +773,13 @@ hr#linnn {
     display: flex;
     margin-bottom: 5em;
     margin-top: 3em;
+  }
+
+  .sum-head h2 {
+    padding-top: 20px;
+  }
+
+  .sum-head p{
+    padding-bottom: 2em;
   }
 }
