--- a/index.css
+++ b/index.css
@@ -705,7 +705,8 @@ hr#linnn {
   }
 
   .footer-bottom {
-    padding-left: 10em;
+    align-content: center;
+    padding: 1em 7em;
   }
 
   .btn-more {
@@ -720,6 +721,7 @@ hr#linnn {
     display: grid;
     grid-template-columns: 45% 45%;
     gap: 2em;
+    margin: 0 5em;
   }
 
   img.artist-pic {
